Few Alignments and Icons Fixed

--- a/src/components/body/work/work-card.css
+++ b/src/components/body/work/work-card.css
@@ -8,9 +8,12 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .work-title label {
+	display: flex;
+	align-items: center;
 	font-size: 20px;
 	font-weight: 600;
 }
@@ -19,7 +22,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
-	height: 0px;
+	height: fit-content;
 	font-size: 15px;
 	font-weight: 200;
 }
